@@ -18,8 +18,9 @@ Data from last <b>24</b> hours.
 Total number of blocks was <b>{BLOCKS_COUNT}</b>,
  making average of <b>{AVG_BLOCKS_PER_HOUR}</b> per hour,
  with the size of <b>{AVG_BLOCKSIZE}</b><br>
-Average difficulty of <b>{AVG_DIFFICULTY}</b>,
-accounting to total network's rate of <b>{AVG_HASHDATE}</b><br>
+Network's rate of <b>{AVG_HASHDATE}</b>,
+at average difficulty <b>{AVG_DIFFICULTY}</b>,
+which changes in <b>{DIFF_CHANGE_IN}</b> blocks<br>
 <br>
 <table class="bord">
 	<tr>
