@@ -1,5 +1,5 @@
 # Is this a Testnet wallet
-testnet=false
+testnet=true
 
 # Deterministic wallet type (1, 2 or 3):
 waltype=3
@@ -17,7 +17,7 @@ uncompressed=false
 fee=0.0001
 
 # Apply changes to balance/unspent.txt after each send
-apply2bal=true
+apply2bal=false
 
 # Use a proprietary (OS independent) random number source
 secrand=true
